# flowci

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  go.mod  go.sum  index.html  main.go  main_integration_test.go  main_test.go  package.json  wails.json
.github/workflows/: cd.yml  ci.yml
docs/: API_SPECIFICATION.md  ERROR_CODES.md  PROJECT_STANDARDS.md  PROJECT_STRUCTURE.md
docs/api/: openapi.yaml
docs/standards/: FRONTEND_MIGRATION.md  ROADMAP.md  backend-spec.md  data-spec.md  design-system.md  frontend-spec.md  ipc-spec.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.vue  main.ts
go/: go.mod
internal/ai/: diagnose.go  openai.go  openai_test.go
internal/config/: path.go
internal/docker/: build.go  build_test.go  client.go  compose.go  compose_test.go  container.go  container_test.go  image.go  image_test.go  inspect.go  push.go
internal/git/: clone.go  inspect.go  inspect_test.go
internal/gitprovider/: gitea.go  gitea_test.go  types.go
internal/handler/: ai.go  app.go  build.go  compose.go  container.go  dashboard.go  dto.go  errors.go  fake_docker_test.go  git.go  gitea.go  handlers_test.go  image.go  integration_test.go  pipeline.go  project.go  push.go  settings.go  window.go
internal/logger/: logger.go
internal/pipeline/: executor.go  executor_test.go  validator.go  yaml.go  yaml_test.go
internal/secret/: keyring.go  mask.go  mask_test.go
internal/store/: builds.go  builds_test.go  migrate.go  pipelines.go  pipelines_test.go  projects.go  projects_test.go  settings_test.go  store.go  store_test.go
internal/types/: time.go
internal/validate/: validate.go  validate_test.go
openspace-installer/: SKILL.md
scripts/: build.sh  run.sh  setup.sh
sdlc-manager/: SKILL.md
skills/openspace-installer/: SKILL.md
skills/sdlc-manager/: SKILL.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: build.rs  deploy.rs  docker.rs  http_client.rs  mod.rs  project.rs  push.rs
store/: builds.go  pipelines.go  projects.go  settings.go  store.go
(+74 files in other folders)
